// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequireAuth passes function to returned Route that renders CircularProgress when permissions fetching 1`] = `
<div>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary makeStyles-circularProgress-2 css-1a30p6q-MuiCircularProgress-root"
    role="progressbar"
    style="width: 70px; height: 70px;"
  >
    <svg
      class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </span>
</div>
`;

exports[`RequireAuth passes function to returned Route that renders PrivateComponent when user has tokens 1`] = `
<div>
  <span>
    PrivateComponent
  </span>
</div>
`;

exports[`RequireAuth passes function to returned Route that renders PublicComponent when user has no tokens 1`] = `
<div>
  <span>
    PublicComponent
  </span>
</div>
`;

exports[`RequireAuth renders passing correct props to returned Route 1`] = `
<div>
  <div>
    Private Component Mock
  </div>
</div>
`;
